feat(exposition): add custom tokens

--- a/extensions/exposition/components/identity.roles/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.roles/manifest.toa.yaml
@@ -18,6 +18,8 @@ operations:
       grantor:
         id: string
         roles: [string]
+    errors:
+      - INACCESSIBLE_SCOPE
   list:
     output: [string]
   principal:
