--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -26,6 +26,7 @@
     "http-cache-semantics": "4.1.1",
     "js-yaml": "4.1.0",
     "matchacho": "0.3.5",
+    "minimatch": "10.0.1",
     "msgpackr": "1.10.1",
     "negotiator": "0.6.3",
     "openspan": "1.0.0-alpha.93",
