--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -25,6 +25,7 @@
     "error-value": "0.4.1",
     "http-cache-semantics": "4.1.1",
     "js-yaml": "4.1.0",
+    "lru-cache": "11.0.1",
     "matchacho": "0.3.5",
     "minimatch": "10.0.1",
     "msgpackr": "1.10.1",
@@ -40,12 +41,13 @@
   },
   "scripts": {
     "test": "jest",
-    "transpile": "tsc && npm run transpile:bans && npm run transpile:basic && npm run transpile:tokens && npm run transpile:roles && npm run transpile:federation",
+    "transpile": "tsc && npm run transpile:bans && npm run transpile:basic && npm run transpile:tokens && npm run transpile:roles && npm run transpile:federation && npm run transpile:keys",
     "transpile:bans": "tsc -p ./components/identity.bans",
     "transpile:basic": "tsc -p ./components/identity.basic",
     "transpile:tokens": "tsc -p ./components/identity.tokens",
     "transpile:roles": "tsc -p ./components/identity.roles",
     "transpile:federation": "tsc -p ./components/identity.federation",
+    "transpile:keys": "tsc -p ./components/identity.keys",
     "features": "cucumber-js",
     "features:security": "cucumber-js --tags @security",
     "features:octets": "cucumber-js features/octets.*"
