feat(exposition): add `_created` to `identity.keys` list

--- a/extensions/exposition/components/identity.keys/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.keys/manifest.toa.yaml
@@ -31,7 +31,7 @@ exposition:
     auth:id: identity
     auth:role: system:identity:keys
     GET:
-      io:output: [id, name]
+      io:output: [id, name, _created]
       query:
         sort: _created:desc
       endpoint: enumerate
