--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Run environment
         run: docker compose up -d --quiet-pull
       - name: Install dependencies
-        run: npm i
+        run: npm ci
         env:
           HUSKY: 0
       - name: Run tests
@@ -69,7 +69,7 @@ jobs:
           GIT_COMMITTER_EMAIL: ${{ steps.gpg.outputs.email }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm i
+          npm ci
 
           if [ ${{ github.base_ref }} = release ]; then
             npx lerna publish --conventional-graduate --no-commit-hooks --no-changelog --yes --message "ci: %s" --sign-git-commit
