--- a/package.json
+++ b/package.json
@@ -48,16 +48,14 @@
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-diff": "29.6.2",
-    "json-schema-to-typescript": "13.1.2",
     "knex": "2.4.2",
     "lerna": "8.1.8",
     "mongodb": "6.7.0",
-    "msw": "2.2.1",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   },
   "scripts": {
     "prepare": "husky install",
