chore: remove `buildx` script

--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "version:local": "lerna version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
     "publish:canary": "lerna publish --canary --preid local --registry http://localhost:4873",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
-    "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
-    "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
+    "setup": "docker compose up -d && npm run cluster && npm run publish:local && npm ci && toa deploy ./integration/context",
     "ci": "rm -f package-lock.json && rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules transpiled\" && npm i",
     "transpile": "lerna run transpile",
     "retranspile": "npm exec --workspaces -c \"rm -rf transpiled\" && npm run transpile",
