test(exposition): add inception with an error

--- a/extensions/exposition/features/steps/components/users/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/users/manifest.toa.yaml
@@ -8,7 +8,9 @@ operations:
   transit:
     concurrency: retry
     input:
-      name*: ~
+      name*: .
   create:
+    concurrency: retry
     query: false
-    forward: transit
+    input:
+      name*: .
